--- a/pagina2.html
+++ b/pagina2.html
@@ -11,7 +11,15 @@
 <body>
 
  <header>    
-    <a href="index.html">FILMES</a>
+    <a href="paginainicial.html" class="btn-nav">FILMES</a>
+ 
+        
+        <div class="container-direita">
+        <nav class="nav-botoes">
+            <a href="index.html" class="btn-nav">LOGIN</a>
+            <a href="cadastro.html" class="btn-nav">CADASTRE-SE</a>
+        </nav>
+          
 <div class="social-media">
         <a href="https://www.instagram.com/jorgesantos__0/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
@@ -20,13 +28,14 @@
         <a href="https://www.facebook.com/jorge.filho.391082" target="_blank">
             <i class="fa-brands fa-facebook-f"></i>
         </a>
-        <a href="">
+        <a href="https://github.com/JorgesantosDF" target="_blank">
              <i class="fa-brands fa-github"></i>
         </a>
         <a href="">
             <i class="fa-brands fa-linkedin-in"></i>
         </a>
     </div>
+
 
 </header>
 
